# Replicore

./: AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  Production-Readiness-test.md  Production-Readyness-test.md  README.md  replicore.example.toml
.github/workflows/: ci.yml  release.yml
docs/: ADMIN-GUIDE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-NFS-RUNBOOK.md  DEPLOYMENT-NFS.md  M0-spike.md  RSD-addendum-membership.md  RSD.md  SECURITY.md  design-guide.md  design-m4-single-copy-serving.md  notes-m3-followups.md  production-acceptance.md  review-3a-conflict.md  review-3c-metadata.md  review-copy-naming.md
packaging/: replicored.service
prompts/: M1-mvp-bidirectional.md  M2-mesh-selfheal.md  M2.5-cluster-membership.md  M3-production-hardening.md  README.md
scripts/: build-release.sh  soak.sh  wan-testbed.sh
src/: admin.rs  apply.rs  chunk.rs  config.rs  conflict.rs  control.rs  decide.rs  fetch.rs  gossip.rs  health.rs  ingest.rs  join.rs  lib.rs  main.rs  membership.rs  merkle.rs  metadata.rs  net.rs  oplog.rs  peer.rs  proto.rs  qos.rs  replica.rs  scanner.rs  state.rs  stats.rs  suppress.rs  vv.rs  watch.rs
tests/: conflict_proptest.proptest-regressions  conflict_proptest.rs  conflict_race.rs  convergence_proptest.proptest-regressions  convergence_proptest.rs  crash_reattribution.rs  integration_m3.rs  integration_membership.rs  integration_mesh.rs  integration_wan.rs  intent_never_written.rs  manifest_crash.rs  membership_proptest.rs  metadata_fidelity.rs  migration.rs  oplog_crash.rs  partial_history_resolution.rs  reconcile_proptest.rs  rename.rs  vv_proptest.rs  watch_fid.rs  write_path_gate.rs
