[package]
name = "replicore"
version = "0.0.1"
edition = "2021"
description = "Replicore M0 spike: fanotify watcher -> QUIC -> atomic apply"

[[bin]]
name = "replicored"
path = "src/main.rs"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
blake3 = "1"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
toml = "0.8"
hex = "0.4"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
opt-level = 2
