# Architected & Developed By:- Faisal Hanif | imfanee@gmail.com
[package]
name = "replicore"
version = "0.0.1"
edition = "2021"
description = "Replicore: multi-master, eventually-consistent file replication engine"

[[bin]]
name = "replicored"
path = "src/main.rs"

[[bin]]
name = "replicorectl"
path = "src/bin/replicorectl.rs"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "net"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
rustls-pemfile = "2"
rcgen = "0.13"
ring = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
blake3 = "1"
fastcdc = "4"
fastrand = "2"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
toml = "0.8"
hex = "0.4"
prometheus = { version = "0.14.0", default-features = false }

[dev-dependencies]
proptest = "1"
tempfile = "3"
# Integration tests inspect connection state directly (deterministic teardown
# assertions); the types are already public via ConnRegistry's API.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
# The v3→v4 migration test forges a legacy-layout database directly (a test
# fixture the write-path grep-gate must not see inside src/).
rusqlite = { version = "0.37", features = ["bundled"] }
bincode = "1.3"
# start_paused virtual-clock tests for the QoS token buckets.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = 2
